@@ -1,3 +1,4 @@
+    ADDED: panel splitter shows the percent values at moving
     ADDED: Copy/Move: preserve all attributes (time, owner, group)
     ADDED: viewer, print + copy actions
     ADDED: new krarc (password handling, type autodetection, writing
